# mediahub_vv2

./: .gitignore  DEVIATIONS.md  PUBSPEC_LOCK_POLICY.md  README.md  README_FIXES.md  analysis_options.yaml  melos.yaml  pubspec.yaml  pubspec_overrides.yaml
.github/actions/setup-flutter/: action.yml
.github/actions/setup-java/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/verify-versions/: action.yml
.github/workflows/: _reusable-build.yml  _reusable-gen-check.yml  _reusable-lint.yml  _reusable-security.yml  _reusable-test.yml  main.yml  nightly.yml  pr.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  chaquopy-config.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/mediahub/v2/: MainActivity.kt
android/app/src/main/kotlin/com/mediahub/v2/python/: PythonApiHost.kt
android/app/src/main/python/mediahub/: __init__.py  errors.py
android/app/src/main/python/mediahub/plugins/: __init__.py  protocol.py  sandbox.py
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
assets/python/mediahub/: __init__.py
ci/: Dockerfile
lib/: main.dart
lib/bootstrap/: bootstrap.dart
lib/presentation/: error_boundary.dart
lib/presentation/history/: history_screen.dart
lib/presentation/media/: media_list_screen.dart  media_list_tile.dart
lib/presentation/playlists/: playlists_screen.dart
lib/presentation/settings/: settings_screen.dart
python/: README.md  pyproject.toml  requirements-dev.txt
python/mediahub/: api.py
python/tests/: __init__.py  test_api.py
test/: widget_test.dart
test/fakes/: fake_media_repository.dart
test/helpers/: widget_test_helpers.dart
tools/: check_imports.sh  gen.sh
